--- a/src/components/nav/Nav.css
+++ b/src/components/nav/Nav.css
@@ -50,3 +50,9 @@
 .gg-nav--side ul li a {
   color: white;
 }
+
+@media(max-width: 967px) {
+  .gg-header-container > .gg-nav {
+    display: none;
+  }
+}
